[features section] Fix: Added a negative margin to fill the blank gap

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,6 +11,7 @@
         url('../img/nat-4.jpg');
     background-size: cover;
     transform: skewY(-7deg);
+    margin-top: -10rem;
     &>* {
         transform: skewY(7deg); // It does work!"
     }
